--- a/Logging 5/4.vector-Loki.md
+++ b/Logging 5/4.vector-Loki.md
@@ -13,7 +13,7 @@ metadata:
 stringData:
   access_key_id: <>
   access_key_secret: <>
-  bucketnames: lokistoragebucket
+  bucketnames: <>
   endpoint: https://s3.eu-west-3.amazonaws.com
   region: eu-west-3
 ```
